<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

<Button
    android:id="@+id/button00"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/s001"
    />
       <EditText
           android:id="@id/editText00"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="2"
           android:gravity="center_vertical|center_horizontal" >

       </EditText>>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/s002" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal" >
        </EditText>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/s003" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/FrameLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/EditText01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s004" > <!--輸
            入使用者姓名的地方 -->
        </EditText>
        <Button
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s005" /> <!--送
        出訊息的按鈕 -->
        <EditText
            android:id="@+id/EditText02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/s006" > <!--輸
            入訊息的框框 -->
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/button_restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s007" /><!--重
    新啟動APP按鈕 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/button_Link2DB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s008" /> <!--登
        陸DB按鈕 -->
        <Button
            android:id="@+id/button2_Upload2DB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s009" /> <!--備
        份到DB按鈕 -->

        <Button
            android:id="@+id/button_DownloadDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/s010" /><!--還
        原從DB按鈕 -->
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </ScrollView>
</LinearLayout>
